--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -19,9 +19,11 @@
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.9.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "4.12.0",
